<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.timeandtidestudio.emergencybroadcast.UpdateContactActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:textStyle="bold"
        android:layout_marginTop="12dp" android:textSize="18sp" android:layout_marginRight="12dp" android:layout_marginLeft="12dp"
        android:text="@string/contact_name" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:id="@+id/etName"
        android:hint="@string/insert_contact_name_here"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:textStyle="bold"
        android:textSize="18sp" android:layout_marginRight="12dp" android:layout_marginLeft="12dp"
        android:text="@string/contact_phone_number" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp" android:inputType="phone"
        android:id="@+id/etPhoneNumber"
        android:hint="@string/insert_contact_phone_number_here"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/btnSave"
        android:layout_margin="12dp"/>
</LinearLayout>
