<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.timeandtidestudio.emergencybroadcast.CreateMessageActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/broadcast_warning"
        android:textStyle="bold"
        android:layout_margin="12dp"
        android:id="@+id/tvWarning"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="10"
        android:id="@+id/etMessageDraft"
        android:hint="@string/compose_manual_message_draft_hint"
        android:layout_below="@id/tvWarning"
        android:layout_margin="12dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_message"
        android:id="@+id/btnSend"
        android:layout_below="@id/etMessageDraft"
        android:layout_margin="12dp"/>

</RelativeLayout>
